Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5980

QListView::setAlternatingRowColors is not working anymore on S60v5 in 4.6.0-rc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.2
    • 4.6.0
    • None
    • S60 5th edition (Nokia 5800)
    • 7bbd14b371fe6d931b0c65b00bf36f3b9a2ac33c

    Description

      While it was working in 4.6.0-beta, QListView::setAlternatingRowColors is no more working in 4.6.0-rc

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            koying Chris Browet
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes